* renamed libvmod_varnish4_geoip to libvmod_geoip * several fixes

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,17 +1,18 @@
 AM_CPPFLAGS = @VMOD_INCLUDES@
 
 vmoddir = @VMOD_DIR@
-vmod_LTLIBRARIES = libvmod_varnish4_geoip.la
+vmodtoolargs = --strict
+vmod_LTLIBRARIES = libvmod_geoip.la
 
-libvmod_varnish4_geoip_la_LDFLAGS = -module -export-dynamic -avoid-version -lGeoIP
+libvmod_geoip_la_LDFLAGS = -module -export-dynamic -avoid-version -lGeoIP
 
-libvmod_varnish4_geoip_la_SOURCES = \
+libvmod_geoip_la_SOURCES = \
 	vcc_if.c \
 	vcc_if.h \
 	vmod_varnish4_geoip.c
 
 vcc_if.c vcc_if.h: @VMODTOOL@ $(top_srcdir)/src/vmod_varnish4_geoip.vcc
-	@VMODTOOL@ $(top_srcdir)/src/vmod_varnish4_geoip.vcc
+	@VMODTOOL@ $(vmodtoolargs) $(top_srcdir)/src/vmod_varnish4_geoip.vcc
 
 EXTRA_DIST = \
 	vmod_varnish4_geoip.vcc
